52e74da fix(animations): remove overflow from styles in steps and expansion-panel (#374)

--- a/expansion-panel/expansion-panel.component.css
+++ b/expansion-panel/expansion-panel.component.css
@@ -27,7 +27,3 @@ md-nav-list {
   overflow: hidden;
   text-overflow: ellipsis;
   margin-right: 5px; }
-
-.td-expansion-content,
-.td-expansion-summary {
-  overflow: hidden; }
